<resources>
    <string name="app_name">StudentLifeApp</string>
    <string name="activity_main_bottom_screen_dashboard">Dashboard</string>
    <string name="activity_main_bottom_screen_timeTable">Timetable</string>
    <string name="activity_main_bottom_screen_subjects">Subjects</string>
    <string name="activity_main_bottom_screen_course">Course</string>
    <string name="activity_main_bottom_screen_studyMode">Study Mode</string>

    <string name="title_activity_study_mode">StudyMode</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_btn">Login</string>
    <string name="signup_btn">Sign-Up</string>
    <string name="name">Name</string>
    <string name="max_weight_string" formatted="true">/%1$d%%</string>
    <string name="subject_percent_string">%1$.2f%%</string>
    <string name="placeholder_string">%1$s</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="study_duration">%1$d  Mins</string>
    <string name="subject_details_name">%1$s Details:</string>
    <string name="date_span">%1$s - %2$s</string>
    <string name="time_and_date">%1$s on %2$s</string>
    <string name="event_details_string">%1$s Details:</string>
    <string name="event_occurrences">%1$s Occurrences</string>
    <string name="required_credits">Required Credits: %1$d</string>
    <string name="obtained_percent">Obtained: %1$.2f%%</string>
    <string name="mark_out_of">%1$.1f/%2$.0f</string>
    <string name="classification">Classification: %1$s</string>
    <string name="string_fail">Unit Failed</string>
    <string name="remaining_marks">To get a %1$s in this subject you need to get %2$.0f%% average in your remaining assessments</string>
    <string name="about_app">This app was developed for my university final year project. Multiple third party libraries were utilised for development, find them listed below:</string>
    <string name="money_manager">Money Manager</string>
    <string name="money_holder">£%1$.2f</string>
    <string name="repeat_every">*Repeat every:</string>
    <string name="budgeting">Budgeting</string>
    <string name="study_running">Study Currently Running, click below to view progress</string>
    <string name="start_custom_study">Start Custom Study</string>
    <string name="view_study_timer">View Study Timer</string>
    <string name="select_study">Select study event or manually enter study time:</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="delete">Delete</string>
</resources>
